Fixed job button text alignment

--- a/src/sections/jobs-page/styling/JobWidget.module.css
+++ b/src/sections/jobs-page/styling/JobWidget.module.css
@@ -51,7 +51,10 @@
 
 .btn:link,
 .btn:visited {
-  display: inline-block;
+  padding-bottom: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: calc(60px + 4vmin);
   height: calc(8px + 2vmin);
   font-weight: bold;
